@@ -73,7 +73,7 @@ $tempColumns = array (
 			'type' => 'input',
 			'size' => '30',
 			// Requirement: unique (BE users are unique in the whole system)
-			'eval' => 'trim,nospace,unique',
+			'eval' => 'trim,nospace',
 		)
 	),
 );
@@ -81,8 +81,8 @@ $tempColumns = array (
 // Add new columns to be_users table
 t3lib_div::loadTCA('be_users');
 t3lib_extMgm::addTCAcolumns('be_users', $tempColumns, false);
-//t3lib_extMgm::addToAllTCAtypes('be_users','tx_openid_openid;;;;1-1-1');
-tx_openid_addToPalette('be_users', 'username', 'tx_openid_openid');
+t3lib_extMgm::addToAllTCAtypes('be_users','tx_openid_openid;;;;1-1-1', '', 'after:username');
+//tx_openid_addToPalette('be_users', 'username', 'tx_openid_openid');
 t3lib_extMgm::addLLrefForTCAdescr('be_users', 'EXT:' . $_EXTKEY . '/locallang_csh.xml');
 
 // Prepare new columns for fe_users table
