@@ -2,9 +2,7 @@
 # Table structure for table 'be_users'
 #
 CREATE TABLE be_users (
-	tx_openid_openid varchar(255) DEFAULT '' NOT NULL,
-
-	UNIQUE KEY tx_openid_openid(tx_openid_openid)
+	tx_openid_openid varchar(255) DEFAULT '' NOT NULL
 );
 
 
